--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,7 @@ forks = 50
 timeout = 10
 retry_files_enabled = False
 remote_tmp = /tmp
+vault_password_file = .vaultfile
 
 [ssh_connection]
 pipelining = True
