--- a/roles/dotfiles/tasks/install.yml
+++ b/roles/dotfiles/tasks/install.yml
@@ -6,7 +6,28 @@
   vars:
     apt_packages: "{{ dotfiles_shared_packages }}"
 
-- name: pull all dotfiles
-  git:
-    repo: "{{ dotfiles_repo }}"
-    dest: "{{ dotfiles_dest }}"
+- name: install dotfiles
+  shell: |
+    git clone https://github.com/kalos/dotfiles.git .dotfiles_tmp --separate-git-dir=$HOME/.dotfiles
+    rsync --recursive --verbose --exclude '.git' .dotfiles_tmp/ $HOME/
+    rm -r .dotfiles_tmp
+    rm README.md
+  args:
+    chdir: "{{ lookup('env','HOME') }}"
+    warn: no
+    creates: .dotfiles
+
+- name: register encrypted files (via ansible-vault)
+  shell: git ls-files -- '*_encrypted'
+  args:
+    chdir: "{{ dotfiles_dest }}"
+    warn: no
+  register: encrypted_files
+  ignore_errors: yes
+
+- name: decrypt file and install
+  copy:
+    src: "{{ lookup('env','HOME') }}/{{ item }}"
+    dest: "{{ lookup('env','HOME') }}/{{ item.replace('_encrypted','') }}"
+  loop: "{{ encrypted_files.stdout_lines }}"
+  when: encrypted_files.stdout_lines |length > 0
